--- a/app/assets/stylesheets/components/_bio.scss
+++ b/app/assets/stylesheets/components/_bio.scss
@@ -1,4 +1,4 @@
-.bio {
+.about {
     @include row;
     @include fill-parent;
     @include outer-container;
@@ -37,9 +37,9 @@
         }
 
         &__title {
-            padding-bottom: 25px;
+            padding-bottom: 2.5em;
             text-transform: uppercase;
-            font-size: 1.5em;
+            font-size: 1.8em;
 
             @include media(min-width 320px max-width 480px) {
                 text-align: center;
@@ -48,13 +48,21 @@
 
         &__text {
             p {
-                padding-bottom: 15px;
+                padding-bottom: 2.9em;
                 line-height: 1.3em;
                 font-size: 1em;
+            }
+            h3 {
+                font-size: 1.5em;
+                padding-bottom: 1em;
+                font-weight: bold;
+            }
 
-                b {
-                    font-weight: bold;
-                }
+            ul{
+              padding-left: 2em;
+              li{
+                padding-bottom: 1em;
+              }
             }
 
             &--extra {
